Finished with the show-and-tell assignment

--- a/style.css
+++ b/style.css
@@ -15,3 +15,13 @@ h2 {
     text-align: center;
     color: blue;
 }
+
+h3 {
+    color: purple;
+    background-color: silver;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    transform: rotate(-20deg);
+}
